src/.antlr/CParser.java
// Generated from /Users/deebakkarthi/.local/src/kcc/src/C.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, AUTO=2, BREAK=3, CASE=4, CHAR=5, CONST=6, CONTINUE=7, DEFAULT=8, 
		DO=9, DOUBLE=10, ELSE=11, ENUM=12, EXTERN=13, FLOAT=14, FOR=15, GOTO=16, 
		IF=17, INT=18, LONG=19, REGISTER=20, RETURN=21, SHORT=22, SIGNED=23, SIZEOF=24, 
		STATIC=25, STRUCT=26, SWITCH=27, TYPEDEF=28, UNION=29, UNSIGNED=30, VOID=31, 
		VOLATILE=32, WHILE=33, IDENTIFIER=34, CONSTANT=35, STRING_LITERAL=36, 
		ELLIPSIS=37, RIGHT_ASSIGN=38, LEFT_ASSIGN=39, ADD_ASSIGN=40, SUB_ASSIGN=41, 
		MUL_ASSIGN=42, DIV_ASSIGN=43, MOD_ASSIGN=44, AND_ASSIGN=45, XOR_ASSIGN=46, 
		OR_ASSIGN=47, RIGHT_OP=48, LEFT_OP=49, INC_OP=50, DEC_OP=51, PTR_OP=52, 
		AND_OP=53, OR_OP=54, LE_OP=55, GE_OP=56, EQ_OP=57, NE_OP=58, SCOLON=59, 
		LBRACE=60, RBRACE=61, COMMA=62, COLON=63, ASSIGN=64, LPAREN=65, RPAREN=66, 
		LBRACKET=67, RBRACKET=68, DOT=69, AMPERSAND=70, NOT_OP=71, BITNOT=72, 
		MINUS=73, PLUS=74, ASTERISK=75, DIV=76, MOD=77, LT_OP=78, GT_OP=79, XOR_OP=80, 
		BITOR=81, QUESTION=82, WS=83;
	public static final int
		RULE_primary_expression = 0, RULE_postfix_expression = 1, RULE_argument_expression_list = 2, 
		RULE_unary_expression = 3, RULE_unary_operator = 4, RULE_cast_expression = 5, 
		RULE_multiplicative_expression = 6, RULE_multiplicative_expression_prime = 7, 
		RULE_addictive_expression = 8, RULE_addictive_expression_prime = 9, RULE_shift_expression = 10, 
		RULE_shift_expression_prime = 11, RULE_relational_expression = 12, RULE_relational_expression_prime = 13, 
		RULE_equality_expression = 14, RULE_equality_expression_prime = 15, RULE_bit_and_expression = 16, 
		RULE_bit_and_expression_prime = 17, RULE_xor_expression = 18, RULE_xor_expression_prime = 19, 
		RULE_bit_or_expression = 20, RULE_bit_or_expression_prime = 21, RULE_logical_and_expression = 22, 
		RULE_logical_and_expression_prime = 23, RULE_logical_or_expression = 24, 
		RULE_logical_or_expression_prime = 25, RULE_conditional_expression = 26, 
		RULE_assignment_expression = 27, RULE_assignment_operator = 28, RULE_expression = 29, 
		RULE_expression_prime = 30, RULE_constant_expression = 31, RULE_declaration = 32, 
		RULE_declaration_specifiers = 33, RULE_init_declaration_list = 34, RULE_init_declarator = 35, 
		RULE_storage_class_specifier = 36, RULE_type_specifier = 37, RULE_struct_or_union_specifier = 38, 
		RULE_struct_or_union = 39, RULE_struct_declaration_list = 40, RULE_struct_declaration_list_prime = 41, 
		RULE_struct_declaration = 42, RULE_specifier_qualifier_list = 43, RULE_struct_declarator_list = 44, 
		RULE_struct_declarator_list_prime = 45, RULE_struct_declarator = 46, RULE_enum_specifier = 47, 
		RULE_enumerator_list = 48, RULE_enumerator_list_prime = 49, RULE_enumerator = 50, 
		RULE_type_qualifier = 51, RULE_declarator = 52, RULE_direct_declarator = 53, 
		RULE_direct_declarator_prime = 54, RULE_pointer = 55, RULE_type_qualifier_list = 56, 
		RULE_type_qualifier_list_prime = 57, RULE_parameter_type_list = 58, RULE_parameter_list = 59, 
		RULE_parameter_list_prime = 60, RULE_parameter_declaration = 61, RULE_identifier_list = 62, 
		RULE_identifier_list_prime = 63, RULE_type_name = 64, RULE_abstract_declarator = 65, 
		RULE_direct_abstract_declarator = 66, RULE_direct_abstract_declarator_prime = 67, 
		RULE_initializer = 68, RULE_initializer_list = 69, RULE_initializer_list_prime = 70, 
		RULE_statement = 71, RULE_labeled_statement = 72, RULE_compound_statement = 73, 
		RULE_declaration_list = 74, RULE_declaration_list_prime = 75, RULE_statement_list = 76, 
		RULE_statement_list_prime = 77, RULE_expression_statement = 78, RULE_selection_statement = 79, 
		RULE_iteration_statement = 80, RULE_jump_statement = 81, RULE_translation_unit = 82, 
		RULE_translation_unit_prime = 83, RULE_external_declaration = 84, RULE_function_definition = 85;
	private static String[] makeRuleNames() {
		return new String[] {
			"primary_expression", "postfix_expression", "argument_expression_list", 
			"unary_expression", "unary_operator", "cast_expression", "multiplicative_expression", 
			"multiplicative_expression_prime", "addictive_expression", "addictive_expression_prime", 
			"shift_expression", "shift_expression_prime", "relational_expression", 
			"relational_expression_prime", "equality_expression", "equality_expression_prime", 
			"bit_and_expression", "bit_and_expression_prime", "xor_expression", "xor_expression_prime", 
			"bit_or_expression", "bit_or_expression_prime", "logical_and_expression", 
			"logical_and_expression_prime", "logical_or_expression", "logical_or_expression_prime", 
			"conditional_expression", "assignment_expression", "assignment_operator", 
			"expression", "expression_prime", "constant_expression", "declaration", 
			"declaration_specifiers", "init_declaration_list", "init_declarator", 
			"storage_class_specifier", "type_specifier", "struct_or_union_specifier", 
			"struct_or_union", "struct_declaration_list", "struct_declaration_list_prime", 
			"struct_declaration", "specifier_qualifier_list", "struct_declarator_list", 
			"struct_declarator_list_prime", "struct_declarator", "enum_specifier", 
			"enumerator_list", "enumerator_list_prime", "enumerator", "type_qualifier", 
			"declarator", "direct_declarator", "direct_declarator_prime", "pointer", 
			"type_qualifier_list", "type_qualifier_list_prime", "parameter_type_list", 
			"parameter_list", "parameter_list_prime", "parameter_declaration", "identifier_list", 
			"identifier_list_prime", "type_name", "abstract_declarator", "direct_abstract_declarator", 
			"direct_abstract_declarator_prime", "initializer", "initializer_list", 
			"initializer_list_prime", "statement", "labeled_statement", "compound_statement", 
			"declaration_list", "declaration_list_prime", "statement_list", "statement_list_prime", 
			"expression_statement", "selection_statement", "iteration_statement", 
			"jump_statement", "translation_unit", "translation_unit_prime", "external_declaration", 
			"function_definition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'auto'", "'break'", "'case'", "'char'", "'const'", "'continue'", 
			"'default'", "'do'", "'double'", "'else'", "'enum'", "'extern'", "'float'", 
			"'for'", "'goto'", "'if'", "'int'", "'long'", "'register'", "'return'", 
			"'short'", "'signed'", "'sizeof'", "'static'", "'struct'", "'switch'", 
			"'typedef'", "'union'", "'unsigned'", "'void'", "'volatile'", "'while'", 
			null, null, null, "'...'", "'>>='", "'<<='", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'&='", "'^='", "'|='", "'>>'", "'<<'", "'++'", "'--'", 
			"'->'", "'&&'", "'||'", "'<='", "'>='", "'=='", "'!='", "';'", "'{'", 
			"'}'", "','", "' :'", "'='", "'('", "')'", "'['", "']'", "'.'", "'&'", 
			"'!'", "'~'", "'-'", "'+'", "'*'", "'/'", "'%'", "'<'", "'>'", "'^'", 
			"'|'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "AUTO", "BREAK", "CASE", "CHAR", "CONST", "CONTINUE", 
			"DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTERN", "FLOAT", "FOR", 
			"GOTO", "IF", "INT", "LONG", "REGISTER", "RETURN", "SHORT", "SIGNED", 
			"SIZEOF", "STATIC", "STRUCT", "SWITCH", "TYPEDEF", "UNION", "UNSIGNED", 
			"VOID", "VOLATILE", "WHILE", "IDENTIFIER", "CONSTANT", "STRING_LITERAL", 
			"ELLIPSIS", "RIGHT_ASSIGN", "LEFT_ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", 
			"OR_ASSIGN", "RIGHT_OP", "LEFT_OP", "INC_OP", "DEC_OP", "PTR_OP", "AND_OP", 
			"OR_OP", "LE_OP", "GE_OP", "EQ_OP", "NE_OP", "SCOLON", "LBRACE", "RBRACE", 
			"COMMA", "COLON", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"DOT", "AMPERSAND", "NOT_OP", "BITNOT", "MINUS", "PLUS", "ASTERISK", 
			"DIV", "MOD", "LT_OP", "GT_OP", "XOR_OP", "BITOR", "QUESTION", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Primary_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public TerminalNode CONSTANT() { return getToken(CParser.CONSTANT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(CParser.STRING_LITERAL, 0); }
		public TerminalNode LPAREN() { return getToken(CParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CParser.RPAREN, 0); }
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
	}

	public final Primary_expressionContext primary_expression() throws RecognitionException {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primary_expression);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				match(IDENTIFIER);
				}
				break;
			case CONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				match(CONSTANT);
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				match(STRING_LITERAL);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(175);
				match(LPAREN);
				setState(176);
				expression();
				setState(177);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Postfix_expressionContext extends ParserRuleContext {
		public Primary_expressionContext primary_expression() {
			return getRuleContext(Primary_expressionContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(CParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(CParser.RBRACKET, 0); }
		public TerminalNode LPAREN() { return getToken(CParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CParser.RPAREN, 0); }
		public Argument_expression_listContext argument_expression_list() {
			return getRuleContext(Argument_expression_listContext.class,0);
		}
		public TerminalNode DOT() { return getToken(CParser.DOT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public TerminalNode PTR_OP() { return getToken(CParser.PTR_OP, 0); }
		public TerminalNode INC_OP() { return getToken(CParser.INC_OP, 0); }
		public TerminalNode DEC_OP() { return getToken(CParser.DEC_OP, 0); }
		public Postfix_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfix_expression; }
	}

	public final Postfix_expressionContext postfix_expression() throws RecognitionException {
		Postfix_expressionContext _localctx = new Postfix_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_postfix_expression);
		try {
			setState(210);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				primary_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182);
				primary_expression();
				setState(183);
				match(LBRACKET);
				setState(184);
				expression();
				setState(185);
				match(RBRACKET);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(187);
				primary_expression();
				setState(188);
				match(LPAREN);
				setState(189);
				match(RPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(191);
				primary_expression();
				setState(192);
				match(LPAREN);
				setState(193);
				argument_expression_list();
				setState(194);
				match(RPAREN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(196);
				primary_expression();
				setState(197);
				match(DOT);
				setState(198);
				match(IDENTIFIER);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(200);
				primary_expression();
				setState(201);
				match(PTR_OP);
				setState(202);
				match(IDENTIFIER);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(204);
				primary_expression();
				setState(205);
				match(INC_OP);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(207);
				primary_expression();
				setState(208);
				match(DEC_OP);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Argument_expression_listContext extends ParserRuleContext {
		public List<Assignment_expressionContext> assignment_expression() {
			return getRuleContexts(Assignment_expressionContext.class);
		}
		public Assignment_expressionContext assignment_expression(int i) {
			return getRuleContext(Assignment_expressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(CParser.COMMA, 0); }
		public Argument_expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_expression_list; }
	}

	public final Argument_expression_listContext argument_expression_list() throws RecognitionException {
		Argument_expression_listContext _localctx = new Argument_expression_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argument_expression_list);
		try {
			setState(217);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				assignment_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(213);
				assignment_expression();
				setState(214);
				match(COMMA);
				setState(215);
				assignment_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Unary_expressionContext extends ParserRuleContext {
		public Postfix_expressionContext postfix_expression() {
			return getRuleContext(Postfix_expressionContext.class,0);
		}
		public TerminalNode INC_OP() { return getToken(CParser.INC_OP, 0); }
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public TerminalNode DEC_OP() { return getToken(CParser.DEC_OP, 0); }
		public Unary_operatorContext unary_operator() {
			return getRuleContext(Unary_operatorContext.class,0);
		}
		public Cast_expressionContext cast_expression() {
			return getRuleContext(Cast_expressionContext.class,0);
		}
		public TerminalNode SIZEOF() { return getToken(CParser.SIZEOF, 0); }
		public TerminalNode LPAREN() { return getToken(CParser.LPAREN, 0); }
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CParser.RPAREN, 0); }
		public Unary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_expression; }
	}

	public final Unary_expressionContext unary_expression() throws RecognitionException {
		Unary_expressionContext _localctx = new Unary_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unary_expression);
		try {
			setState(232);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case CONSTANT:
			case STRING_LITERAL:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(219);
				postfix_expression();
				}
				break;
			case INC_OP:
				enterOuterAlt(_localctx, 2);
				{
				setState(220);
				match(INC_OP);
				setState(221);
				unary_expression();
				}
				break;
			case DEC_OP:
				enterOuterAlt(_localctx, 3);
				{
				setState(222);
				match(DEC_OP);
				setState(223);
				unary_expression();
				}
				break;
			case AMPERSAND:
			case NOT_OP:
			case BITNOT:
			case MINUS:
			case PLUS:
			case ASTERISK:
				enterOuterAlt(_localctx, 4);
				{
				setState(224);
				unary_operator();
				setState(225);
				cast_expression();
				}
				break;
			case SIZEOF:
				enterOuterAlt(_localctx, 5);
				{
				setState(227);
				match(SIZEOF);
				setState(228);
				match(LPAREN);
				setState(229);
				type_name();
				setState(230);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
